Bug#59354 : Bug #12659252 : ASSERT !OTHER_LOCK AT LOCK_REC_ADD_TO_QUEUE DURING A DELETE OPERATION The converted implicit lock should wait for the prior conflicting lock if found.

rb://1437 approved by Marko